# django-datadog-logger

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yml  build.yml  ci.yml  pr-checks.yml
django_datadog_logger/: __init__.py  asgi.py  celery.py  encoders.py  filters.py  local.py  recursion.py  request.py  wsgi.py
django_datadog_logger/formatters/: datadog.py
django_datadog_logger/middleware/: error_log.py  request_id.py  request_log.py
django_datadog_logger/rest_framework/: mixins.py
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
tests/: __init__.py  settings.py  test_django_datadog_logger.py  test_middleware.py  test_recursion.py
