[build-system]
requires = ["setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-datadog-logger"
description = "Django DataDog Logger integration package."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Lenno Nagel", email = "lenno@namespace.ee"}
]
keywords = ["django_datadog_logger"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "backports.zoneinfo; python_version<'3.9'",
    "Django",
    "djangorestframework",
    "JSON-log-formatter",
]

[project.urls]
Homepage = "https://github.com/namespace-ee/django-datadog-logger"

[dependency-groups]
dev = [
    "coverage",
    "tox",
    "watchdog",
]
docs = [
    # Documentation will be built with the Python from .python-version
    "sphinx>=7,<8; python_version>'3.8'",
    "myst-parser>=2,<3; python_version>'3.8'",
    "importlib-metadata; python_version<'3.8'",
]
pep8 = [
    "black",
    "flake8",
    "isort",
]

[tool.setuptools]
packages = ["django_datadog_logger"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | build
  | dist

)/
'''
