[project]
name = "django-datadog-logger"
version = "0.7.3"
description = "Django DataDog Logger integration package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Lenno Nagel", email = "lenno@namespace.ee" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["django_datadog_logger"]
dependencies = [
    "JSON-log-formatter",
    "Django",
    "djangorestframework",
]

[project.urls]
Homepage = "https://github.com/namespace-ee/django-datadog-logger"

[dependency-groups]
dev = [
    "bump2version",
    "wheel",
    "watchdog",
    "flake8",
    "tox",
    "coverage",
    "twine",
    "black",
]
docs = [
    "sphinx>=7,<8",
    "myst-parser>=2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_datadog_logger"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

